--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Calum Joshua Barratt - Portfolio</title>
 </head>
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html"> Home </a>
+            </li>
+            <li>
+                <a href="#"> About </a>
+            </li>
+            <li>
+                <a href="#"> Contact </a>
+            </li>
+        </ul>
+    </nav>
+</header>
 <body>
     <h1>Hello World</h1>
 </body>
